--- a/templates/group/group_list.html.twig
+++ b/templates/group/group_list.html.twig
@@ -12,6 +12,6 @@
 		rejoint{{ app.user.memberUserGroups|length > 1 ? 's' : '' }}</h3>
 
 	{% for group in app.user.memberUserGroups %}
-		{{ group.name }}
+		<a href="{{ path('user_group_view', {'id': group.id }) }}">{{ group.name }}</a>
 	{% endfor %}
 {% endif %}
