--- a/templates/group/group_request_received.html.twig
+++ b/templates/group/group_request_received.html.twig
@@ -1,1 +1,9 @@
-re
+{% for request in app.user.receivedUserGroupRequests %}
+	<div class="row">
+		{{ request.userGroup.name }}
+		<a href="{{ path('user_group_request_response', {'idGroup': request.userGroup.id, 'idRequest': request.id, 'state': 'accept'}) }}">Accepter</a>
+		<a href="{{ path('user_group_request_response', {'idGroup': request.userGroup.id, 'idRequest': request.id, 'state': 'refuse'}) }}">Refuser</a>
+	</div>
+{% else %}
+	Aucune invitation.
+{% endfor %}
