--- a/templates/listing/listing_view.html.twig
+++ b/templates/listing/listing_view.html.twig
@@ -1,5 +1,7 @@
-<h3>{{ listing.user.username }}</h3>
-
-{% for item in listing.listingItems %}
-    {{ item.name }} {{ item.reference != '' and item.reference is not null ? item.reference : '' }}
-{% endfor %}
+{% if listing is not null %}
+    {% for item in listing.listingItems %}
+        {{ item.name }} {{ item.reference != '' and item.reference is not null ? ' - ' ~ item.reference : '' }} <br>
+    {% endfor %}
+{% else %}
+    Ce membre ne possède pas de liste. 
+{% endif %}
