--- a/templates/listing/listing_update.html.twig
+++ b/templates/listing/listing_update.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form) }}
-    <button type="button" class="listing-add-item btn btn-sm btn-info hidden" data-list-selector="ul#listing-update-form">Ajouter</button>
+    {# <button type="button" class="listing-add-item btn btn-sm btn-info hidden" data-list-selector="ul#listing-update-form">Ajouter</button> #}
     {{ form_errors(form) }}
 
     <ul id="listing-update-form"
@@ -14,8 +14,10 @@
         
     </ul>
 
-        <button type="submit" id="listing-update-btn-submit" class="btn btn-sm btn-success col hidden">Valider</button>
-        <button type="button" id="listing-update-btn-update" class="btn btn-sm btn-warning col">Modifier</button>
-        <button type="button" id="listing-update-btn-cancel" class="btn btn-sm btn-danger col hidden">Annuler</button>
+        <button type="button" class="listing-add-item btn btn-sm btn-info hidden" data-list-selector="ul#listing-update-form">Ajouter</button>
+        <button type="submit" id="listing-update-btn-submit" class="btn btn-sm btn-success hidden">Valider</button>
+        <button type="button" id="listing-update-btn-update" class="btn btn-sm btn-warning">Modifier</button>
+        <button type="button" id="listing-update-btn-cancel" class="btn btn-sm btn-danger hidden">Annuler</button>
+        <br><br>
 
 {{ form_end(form) }}
