--- a/templates/friend/index.html.twig
+++ b/templates/friend/index.html.twig
@@ -5,13 +5,13 @@
 		{{ render(controller('App\\Controller\\FriendController::newFriend')) }}
 
 		<div class="row">
-			<div class="col-lg">
+			<div class="col">
 				<div class="friends-list">
 					<h2>Liste d'ami.s</h2>
 					{% include "friend/friend_list.html.twig" %}
 				</div>
 			</div>
-			<div class="col-lg">
+			<div class="col">
 				<div class="row">
 					<div class="friends-requests-send">
 						<h2>Invitation.s envoyée.s</h2>
@@ -24,6 +24,7 @@
 						{% include "friend/friend_request_received.html.twig" %}
 					</div>
 				</div>
+				<br><br>
 			</div>
 		</div>
 	</div>
