--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,7 @@
 
 			<script src="{{ asset('js/friend.js') }}"></script>
 			<script src="{{ asset('js/listing.js') }}"></script>
+			<script src="{{ asset('js/notice.js') }}"></script>
 		{% endblock %}
 	</body>
 </html>
