--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,10 +5,6 @@
 
 {% block body %}
 	{% if app.user %}
-		<div class="mb-3">
-			You are logged in as
-			{{ app.user.username }},
-			<a href="{{ path('app_logout') }}">Logout</a>
-		</div>
+		{{ render(controller('App\\Controller\\NoticeController::index')) }}
 	{% endif %}
 {% endblock %}
