feat(route active display)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
 	<body>
 		{% block navbar %}
 			{% if app.user %}
-				{{ render(controller('App\\Controller\\MenuController::mainMenu')) }}
+				{{ render(controller('App\\Controller\\MenuController::mainMenu', {'route': app.request.attributes.get('_route')})) }}
 			{% endif %}
 		{% endblock %}
 		{% block body %}{% endblock %}
