--- a/templates/friend/friend_list.html.twig
+++ b/templates/friend/friend_list.html.twig
@@ -1,5 +1,5 @@
 {% for friend in app.user.friends %}
-	{{ friend.username }}
+	{{ friend.username }} <br>
 {% else %}
 	Aucun ami pour le moment.
 {% endfor %}
