--- a/templates/friend/friend_request_received.html.twig
+++ b/templates/friend/friend_request_received.html.twig
@@ -1,18 +1,23 @@
-{% for request in app.user.ReceivedFriendRequests %}
-	<div class="friend-request">
-		{{ request.sender.username }}
-		<a href="{{ path('friend_request_response', {'id': request.id, 'state': 'accept'}) }}" class="btn btn-outline-success btn-sm friend-request-response" path="{{ path('friend_request_response', {'id': request.id, 'state': 'accept'}) }}">
-			<svg width="1em" height="1em" viewbox="0 0 16 16" class="bi bi-check text-dark" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-				<path fill-rule="evenodd" d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.236.236 0 0 1 .02-.022z"/>
-			</svg>
-		</a>
+{% set friendRequests = app.user.pendingReceivedFriendRequests %}
 
-		<a href="{{ path('friend_request_response', {'id': request.id, 'state': 'refuse'}) }}" class="btn btn-outline-danger btn-sm friend-request-response" path="{{ path('friend_request_response', {'id': request.id, 'state': 'refuse'}) }}">
-			<svg width="1em" height="1em" viewbox="0 0 16 16" class="bi bi-x text-dark" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-				<path fill-rule="evenodd" d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-			</svg>
-		</a>
-	</div>
+<div class="container">
+
+{% if (friendRequests|length) > 0 %}
+	{% for request in friendRequests %}
+		<div class=".pending-received-friend-request row align-item-start" id="pending-received-friend-request-{{ loop.index }}">
+			<div class="col">
+				{{ request.sender.username }}
+			</div>
+			<div class="col">
+				<i>{{ request.date|date('d-m-Y') }}</i>
+			</div>
+			<div class="col">
+				<button type="button" class="btn btn-sm btn-success friend-request-accept" path="{{ path('friend_request_response', {'id': request.id, 'state': 'accept'}) }}" container="div#pending-received-friend-request-{{ loop.index }}">V</button>
+				<button type="button" class="btn btn-sm btn-danger friend-request-refuse" path="{{ path('friend_request_response', {'id': request.id, 'state': 'refuse'}) }}" container="div#pending-received-friend-request-{{ loop.index }}">X</button>
+			</div>
+		</div>
+	{% endfor %}
 {% else %}
 	Aucune invitation reçue.
-{% endfor %}
+{% endif %}
+</div>
