--- a/templates/friend/friend_list.html.twig
+++ b/templates/friend/friend_list.html.twig
@@ -1,5 +1,7 @@
 {% for friend in app.user.friends %}
-	{{ friend.username }} <br>
+	<div class="friend-hover">
+		{{ friend.username }} <br>
+	</div>
 {% else %}
 	Aucun ami pour le moment.
 {% endfor %}
