--- a/templates/friend/friend_list.html.twig
+++ b/templates/friend/friend_list.html.twig
@@ -1,5 +1,5 @@
 {% for friend in app.user.friends %}
-	<div class="friend-hover">
+	<div class="friend dark-hover">
 		{{ friend.username }} <br>
 	</div>
 {% else %}
