--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,11 +32,36 @@ body {
     margin-top: 3%;
 }
 
+/* BREADCRUMB */
+.breadcrumb {
+    background-color: #adadad;
+}
+
+.breadcrumb-item.active {
+    color: #3c3c3c;
+}
+
+/* BUTTON */
 .btn-xs{
     padding: .25rem .5rem;
     font-size: .600rem;
     border-radius: .2rem;
 }
+
+/* PLACEHOLDER */
+::-webkit-input-placeholder {
+    font-style: italic;
+}
+:-moz-placeholder {
+font-style: italic;  
+}
+::-moz-placeholder {
+font-style: italic;  
+}
+:-ms-input-placeholder {  
+font-style: italic; 
+}
+ 
 
 /* HOVERS */
 .dark-hover:hover{
