--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
 		{% block stylesheets %}
 			<link rel="stylesheet" href="{{ asset('css/main.css') }}">
 			<link rel="stylesheet" href="{{ asset('css/friend.css') }}">
+			<link rel="stylesheet" href="{{ asset('css/purchase.css') }}">
 		{% endblock %}
 	</head>
 	<body>
