Add(Purchase: buy / refund / cancel system)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,7 @@
 			<script src="{{ asset('js/friend.js') }}"></script>
 			<script src="{{ asset('js/listing.js') }}"></script>
 			<script src="{{ asset('js/notice.js') }}"></script>
+			<script src="{{ asset('js/purchase.js') }}"></script>
 		{% endblock %}
 	</body>
 </html>
