--- a/templates/purchase/purchase_to_refund.html.twig
+++ b/templates/purchase/purchase_to_refund.html.twig
@@ -1,16 +1,11 @@
 <div class="container">
     <h3>A rembourser</h3>
 
-    {% for purchase in purchases %}
-        <div class="purchase row dark-hover" id="purchase-to-refund-{{ loop.index }}">
-            <div class="col align-self-start">
-                {{ purchase.listingItem.name }}
-            </div>
-            <div class="col align-self-end text-align-end">
-                <button class="btn btn-info btn-sm" data-container="body" data-toggle="top" data-content="{{ purchase.listingItem.reference }}">I</button>
-                <button class="btn btn-success btn-sm btn-purchase-refund" path="" container="div#purchase-to-refund-{{ loop.index }}">B</button>
-            </div>
-        </div>
-    {% endfor %}
+    <div class="purchase-to-refund-container">
+        {% for purchase in purchases %}
+            {% include "purchase/purchase_to_refund_item.html.twig" with {'purchase' : purchase} %}
+        {% endfor %}
+    </div>
+    
 </div>
 <br>
